// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search displays loading spinner when searching 1`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-character-count nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Enter a health related query
    </label>
    <span
      class="nhsuk-hint"
    >
      e.g What is an HRT prescription?
    </span>
    <span
      class="nhsuk-error-message"
    >
      the search query must be more than 4 letters
    </span>
    <textarea
      class="nhsuk-textarea nhsuk-js-character-count nhsuk-textarea--error"
      id="search-input"
      maxlength="100"
      name="search"
      placeholder="type something here"
      rows="1"
    />
  </div>
  <button
    class="nhsuk-button    disabled"
    data-module="nhsuk-button"
    data-prevent-double-click="false"
    disabled=""
    id="submit"
    type="button"
  >
    Submit
  </button>
  <span
    class="nhsuk-body-s"
  >
    Queries and results are stored for further analysis. We wont pass personally identifiable information to OpenAI or our internal systems.
  </span>
</div>
`;

exports[`Search displays loading spinner when searching 2`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-character-count nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Rhowch gwestiwn sy'n ymwneud â iechyd
    </label>
    <span
      class="nhsuk-hint"
    >
      e.e. Beth yw HRT PPC?
    </span>
    <span
      class="nhsuk-error-message"
    >
      Rhaid i'r ymholiad chwilio fod yn fwy na 4 llythyren
    </span>
    <textarea
      class="nhsuk-textarea nhsuk-js-character-count nhsuk-textarea--error"
      id="search-input"
      maxlength="100"
      name="search"
      placeholder="teipiwch rhywbeth yma"
      rows="1"
    />
  </div>
  <button
    class="nhsuk-button    disabled"
    data-module="nhsuk-button"
    data-prevent-double-click="false"
    disabled=""
    id="submit"
    type="button"
  >
    Cyflwyno
  </button>
  <span
    class="nhsuk-body-s"
  >
    Cedwir ymholiadau a chanlyniadau ar gyfer dadansoddiad pellach. Ni fyddwn yn trosglwyddo gwybodaeth bersonol adnabyddadwy i OpenAI neu ein systemau mewnol.
  </span>
</div>
`;

exports[`Search displays loading spinner when searching 3`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-character-count nhsuk-form-group nhsuk-form-group--error"
  >
    <label
      class="nhsuk-label"
      for="search-input"
    >
      Cuir fiosrachadh a bhaineas ri slàinte
    </label>
    <span
      class="nhsuk-hint"
    >
      e.g. Dè tha PPC HRT?
    </span>
    <span
      class="nhsuk-error-message"
    >
      feumaidh barrachd air 4 litrichean a bhith anns a' cheist rannsachaidh
    </span>
    <textarea
      class="nhsuk-textarea nhsuk-js-character-count nhsuk-textarea--error"
      id="search-input"
      maxlength="100"
      name="search"
      placeholder="cuir rudeigin an seo"
      rows="1"
    />
  </div>
  <button
    class="nhsuk-button    disabled"
    data-module="nhsuk-button"
    data-prevent-double-click="false"
    disabled=""
    id="submit"
    type="button"
  >
    Cuir ris
  </button>
  <span
    class="nhsuk-body-s"
  >
    Tha ceistean agus toraidhean air an stòradh airson tuilleadh sgrùdaidh. Cha toir sinn seachad fiosrachadh a dh' aithnicheas sinn gu pearsanta gu OpenAI no na siostaman a-staigh againn.
  </span>
</div>
`;

exports[`Search rendered component should match snapshot (cy) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-character-count nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Rhowch gwestiwn sy'n ymwneud â iechyd
      </label>
      <span
        class="nhsuk-hint"
      >
        e.e. Beth yw HRT PPC?
      </span>
      <textarea
        class="nhsuk-textarea nhsuk-js-character-count "
        id="search-input"
        maxlength="100"
        name="search"
        placeholder="teipiwch rhywbeth yma"
        rows="1"
      />
    </div>
    <button
      class="nhsuk-button    "
      data-module="nhsuk-button"
      data-prevent-double-click="false"
      id="submit"
      type="button"
    >
      Cyflwyno
    </button>
    <span
      class="nhsuk-body-s"
    >
      Cedwir ymholiadau a chanlyniadau ar gyfer dadansoddiad pellach. Ni fyddwn yn trosglwyddo gwybodaeth bersonol adnabyddadwy i OpenAI neu ein systemau mewnol.
    </span>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (en) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-character-count nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Enter a health related query
      </label>
      <span
        class="nhsuk-hint"
      >
        e.g What is an HRT prescription?
      </span>
      <textarea
        class="nhsuk-textarea nhsuk-js-character-count "
        id="search-input"
        maxlength="100"
        name="search"
        placeholder="type something here"
        rows="1"
      />
    </div>
    <button
      class="nhsuk-button    "
      data-module="nhsuk-button"
      data-prevent-double-click="false"
      id="submit"
      type="button"
    >
      Submit
    </button>
    <span
      class="nhsuk-body-s"
    >
      Queries and results are stored for further analysis. We wont pass personally identifiable information to OpenAI or our internal systems.
    </span>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (gd) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-character-count nhsuk-form-group "
    >
      <label
        class="nhsuk-label"
        for="search-input"
      >
        Cuir fiosrachadh a bhaineas ri slàinte
      </label>
      <span
        class="nhsuk-hint"
      >
        e.g. Dè tha PPC HRT?
      </span>
      <textarea
        class="nhsuk-textarea nhsuk-js-character-count "
        id="search-input"
        maxlength="100"
        name="search"
        placeholder="cuir rudeigin an seo"
        rows="1"
      />
    </div>
    <button
      class="nhsuk-button    "
      data-module="nhsuk-button"
      data-prevent-double-click="false"
      id="submit"
      type="button"
    >
      Cuir ris
    </button>
    <span
      class="nhsuk-body-s"
    >
      Tha ceistean agus toraidhean air an stòradh airson tuilleadh sgrùdaidh. Cha toir sinn seachad fiosrachadh a dh' aithnicheas sinn gu pearsanta gu OpenAI no na siostaman a-staigh againn.
    </span>
  </div>
</div>
`;
